fix quiz action list spacing; remove a js_block
fixes CNVS-4396

test plan:
- the right sidebar on quiz show for teachers should be formatted correctly
- try deleting a quiz from the edit and show pages
- they should both work

Reviewed-on: https://gerrit.instructure.com/18259
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Myller de Araujo <myller@instructure.com>

--- a/app/stylesheets/utilities/_spacing.scss
+++ b/app/stylesheets/utilities/_spacing.scss
@@ -25,3 +25,7 @@
   }
 }
 
+.no-spacing {
+  margin: 0 !important;
+  padding: 0 !important;
+}
